<resources>
    <string name="app_name">DemoCleanMVP</string>
    <string name="label_item_id">ID:</string>
    <string name="label_item_name">Name</string>
    <string name="label_item_email">Email</string>
    <string name="label_item_company">Company</string>
    <string name="label_add_email">Email</string>
    <string name="label_add_name">Name</string>
    <string name="label_add_company">Company</string>
    <string name="label_add_home_location">Home location</string>
    <string name="text_button_save">Save</string>
</resources>
